--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DevJobs</title>
+    <meta
+      name="description"
+      content="Encuentra las mejores ofertas de trabajo para desarrolladores en DevJobs."
+    />
+    <title>DevJobs - Inicio</title>
   </head>
   <body>
     <div id="root"></div>
