--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     />
     <title>DevJobs - Inicio</title>
   </head>
-  <body>
+  <body class="bg-background">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
